# txtly

./: Cargo.toml  README.md  license  send-test.sh  update-error.sh  update-sent.sh
src/: inbox.rs  key.rs  logo.rs  main.rs  models.rs  reload.rs  router.rs  send.rs  update.rs  util.rs
