[package]
name = "txtly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version ="0.4.24", features = ["serde"] }
glob = "0.3.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
qr2term = "0.3.1"
rand = "0.8.5"
regex = "1.8.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.3.2", features =["v4"] }
warp = "0.3.5"
